<resources>
    <string name="app_name">MIUI Extra</string>
    <string name="title_activity_settings">MIUI Extra</string>
    <string name="misc_header">Misc</string>
    <string name="refresh_rate_header">Refresh Rate</string>
    <string name="vibrator_map_title">Normal Vibrator Mapper</string>
    <string name="vibrator_map_summary">Re Map Normal Vibrate to VibratorEffect</string>
    <string name="wallpaper_scale_title">Wallpaper Scale Settings</string>
    <string name="wallpaper_scale_summary">Customize the scale of wallpaper</string>
    <string name="force_miui_refresh_custom">Enable HyperOS Refresh Rate Customize</string>
    <string name="force_current_refresh_rate_title">Disable HyperOS Refresh Rate Policy</string>
    <string name="force_current_refresh_rate_off">Refresh Rate will control by HyperOS dynamically</string>
    <string name="force_current_refresh_rate_on">Refresh Rate will keep to your settings</string>
    <string name="xposed_desc">Let\'s roll to HyperOS\'s World! @ Art_Chen</string>
    <string name="m90Hz_game_apps">90Hz Game Apps</string>
    <string name="m90Hz_game_apps_summary">The games in this list will run at 90Hz, but otherwise 60Hz to avoid tearing</string>
    <string name="video_apps">Video Apps</string>
    <string name="video_apps_summary">All Video Apps will use 60Hz to save power backup</string>
    <string name="force_60hz_apps">60Hz Apps</string>
    <string name="force_60hz_apps_summary">The application in this list will run at 60Hz, but otherwise keep the refresh rate you set(except Game and Video Apps)</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="map_range_header">Range to ID Map Settings</string>
    <string name="enable_vibrator_remap_title">Enable Vibrator Remap</string>
    <string name="may_need_reboot">This Settings may need reboot to apply</string>
    <string name="may_need_reboot_PowerKeeper">This Settings need reboot PowerKeeper to apply</string>
    <string name="may_need_reboot_miui_home">This Settings need reboot MiuiHome to apply</string>
    <string name="force_disable_mibridge_refresh_scene_title">Force Disable MiBridge Refresh Control</string>
    <string name="set_disable_mibridge_dynamic_refresh_scene_app_title">Disabled MiBridge Refresh Rate App List</string>
    <string name="set_disable_mibridge_dynamic_refresh_scene_app_summary">Click to set the Apps that deny to change the refresh rate by MiBridge Interface</string>
    <string name="about_me_header">About me</string>
    <string name="author_title">Author</string>
    <string name="coolapk_title">CoolAPK</string>
    <string name="weibo_title">Weibo</string>
    <string name="miui_home_anim_enhance_title">Home Anim Enhance</string>
    <string name="miui_home_anim_enhance_summary">Enhance Animations for MiuiHome</string>
    <string name="reboot">Reboot</string>
    <string name="color_fade_anim_smoothly_title">Smooth Screen On / Off Anim</string>
    <string name="color_fade_anim_smoothly_summary">Make Color Fade Animation Slower Than HyperOS Default Settings</string>
    <string name="music_notification_optimize_title">Optimize MIUI Music Notification</string>
    <string name="music_notification_optimize_summary">Don\'t break the Artist change anim and update Artwork quickly</string>
    <string name="music_notification_optimize_foreground_color_title"><![CDATA[Optimize Color for Text & Button]]></string>
    <string name="music_notification_optimize_foreground_color_summary">Use Monet Color instead of Bad MIUI Dynamic Color to improve the readability</string>
    <string name="enable_vibrator_effect_remap_title">Enable Vibrator Effect Mapper</string>
    <string name="effect_map_header">ID - ID Mapper</string>
    <string name="add_new">Add</string>
    <string name="vibrator_effect_map_title">Vibrator Effect Mapper</string>
    <string name="vibrator_effect_map_summary">Re Map Effect Vibrate to Another VibratorEffect</string>
    <string name="want_to_map_id">Add New Map</string>
    <string name="try_effect">Try Effect</string>
    <string name="want_to_delete">Do you want to delete it?</string>
    <string name="hide_app_icon_title">Hide Icon on Launcher</string>
    <string name="about_module_header">Module Settings</string>
    <string name="screen_on_color_fade_anim_val_title">Screen On Animation duration</string>
    <string name="screen_off_color_fade_anim_val_title">Screen Off Animation duration</string>
    <string name="enable_wallpaper_zoom_optimize_title">Enable Wallpaper Zoom Optimize</string>
    <string name="wallpaper_zoom_anim_custom_header">Wallpaper Zoom Animation Customize</string>
    <string name="wallpaper_zoom_anim_common_header">Common</string>
    <string name="wallpaper_zoomOut_start_velocity_summary">Zoom Out Animation Start Velocity</string>
    <string name="wallpaper_zoomIn_start_velocity_summary">Zoom In Animation Start Velocity</string>
    <string name="wallpaper_zoomOut_stiffness_summary">Zoom Out Animation Stiffness</string>
    <string name="wallpaper_zoomIn_stiffness_summary">Zoom In Animation Stiffness</string>
    <string name="wallpaper_zoomOut_summary">Zoom Out Animation Degree</string>
    <string name="wallpaper_auto_zoom_on_lockscreen_title">Auto Zoom on LockScreen</string>
    <string name="miui_unlock_anim_enhance_title">Unlock Anim</string>
    <string name="wallpaper_auto_zoom_on_lockscreen_summary">Only Support if the desktop wallpaper same as the keyguard</string>
    <string name="miui_unlock_wallpaper_anim_fade_title">Use Fade Effect For Desktop Wallpaper</string>
    <string name="miui_unlock_wallpaper_anim_fade_summary">Replace the scale animation to fade animation when unlock if the keyguard wallpaper differ than desktop used</string>
    <string name="miui_unlock_wallpaper_anim_fade_anim_val_title">Wallpaper Fade Anim Duration</string>
    <string name="not_hide_icon_when_enter_recent_title">Don\'t Hide Icons When Enter the Recent View</string>
    <string name="not_hide_icon_when_enter_recent_summary">This will also force enabled blur when enter the recent view</string>
    <string name="sync_wallpaper_and_app_anim_title">Sync Wallpaper Anim to Match App Anim</string>
    <string name="sync_wallpaper_and_app_anim_summary">Recommended to set Wallpaper start anim speed to -1.5f for fast start speed</string>
    <string name="no_zoom_out_when_recent_out_title">Don\'t Zoom out when Enter App from Recent</string>
    <string name="no_zoom_out_when_recent_out_summary">(Has BUG) May not Zoom Back if click too fast when anim not done</string>
    <string name="use_chen_screen_on_anim_title">Use Chen Optimized Screen On Animation</string>
    <string name="use_chen_screen_on_anim_summary">Will use scale + grey effect with love to replace the Original Animation</string>
    <string name="chen_home_handle_anim_title">Enable Chen Gesture Line Animation</string>
    <string name="chen_home_handle_anim_summary">Enable the smooth gesture line animation with Love by Art_Chen</string>
    <string name="home_handle_y_val_title">Home Handle Default offset-Y</string>
    <string name="chen_home_handle_anim_turbo_mode_title">Use Boost Mode for Gesture Line Animation</string>
    <string name="chen_home_handle_anim_turbo_mode_summary">Will let Gesture Line can be move outside the nav bar</string>
    <string name="chen_home_handle_no_space_title">Immersion Gesture Bar</string>
    <string name="chen_home_handle_no_space_summary">Will make navigation bar window has all inset mode</string>
    <string name="chen_home_handle_auto_transparent_title">Home Handle Auto Transparent</string>
    <string name="chen_home_handle_auto_transparent_summary">Translucent for Home Handle by Default, and change when touch</string>
    <string name="do_not_override_pending_transition_title">Prevent App to Override Transition Animation</string>
    <string name="do_not_override_pending_transition_summary">It may restore some app dirty anim to HyperOS style</string>
    <string name="disable_wallpaper_auto_darken_title">Disable Wallpaper Auto Darken</string>
    <string name="chen_home_handle_full_transparent_at_miuihome_title">Transparent Home Handle when on Home Screen</string>
    <string name="home_handle_header">Home Handle</string>
    <string name="music_notification_header">Music Notification</string>
    <string name="use_chen_volume_animation_title">Use Chen Volume View Animation</string>
    <string name="use_chen_volume_animation_summary">Let\'s smooth the Volume!</string>
    <string name="unsupported_android_version">Only Android T(13) and Above is Supported! Some feature may not work as expected!!</string>
    <string name="unsupported_xposed_version">Unsupported Xposed detected! Please install and active LSPosed!</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="status_bar_and_cc_header"><![CDATA[Status Bar & Control Center]]></string>
    <string name="wallpaper_header">Wallpaper</string>
    <string name="enable_blur_scale_title">Use Blur Scale Effect</string>
    <string name="blur_scale_effect_summary">Apply Scale effect when pull down the cc and status bar</string>
    <string name="force_disable_mi_blur_effect_title">Disable Mi Blur Effect on StatusBar Background</string>
    <string name="force_disable_mi_blur_effect_summary"><![CDATA[(BUG!) This is a workaround because some version may not supported blur scale when using mi blur effect.\nIt will let blur background dismiss when switch the NC -> CC by swipe]]></string>
    <string name="blur_scale_val_title">Blur Scale degree</string>
    <string name="chen_home_handle_scale_on_full_transparent_title">Scale home handle when dismiss or appeared</string>
    <string name="chen_home_handle_blur_effect_title">Apply Mi Blur Effect on Home Handle</string>
    <string name="chen_volume_animation_effect_title">Volume Animation Effect</string>
    <string name="shift">Shift</string>
    <string name="stretch">Stretch</string>
    <string name="shift_and_stretch">Shift and Stretch</string>
    <string name="scale">Scale</string>
    <string name="shift_and_scale">Shift and Scale</string>
    <string name="home_handle_auto_trans_alphaval_title">Auto Transparent Degree</string>
    <string name="defaults">Default</string>
    <string name="home_handle_anim_custom_title">Custom Home Handle Animation</string>
    <string name="normal_state_title">Normal State</string>
    <string name="pressed_state_title">Pressed State</string>
    <string name="home_state_title">Home State</string>
    <string name="home_handle_scale_x_title">Scale X</string>
    <string name="home_handle_scale_y_title">Scale Y</string>
    <string name="home_handle_anim_duration_alpha">Alpha/Blur Anim Duration</string>
    <string name="home_handle_anim_duration_scale">Scale Anim Duration</string>
    <string name="home_handle_anim_duration_xy">Zoom Anim Duration</string>
    <string name="home_handle_disable_move_event_title">Disable Home Handle Movement</string>
    <string name="home_handle_force_alpha_at_home_title">Force to use alpha anim at home</string>
    <string name="home_handle_force_alpha_at_home_summary">Transparent Anim will adjust alpha and drop blur effect</string>
    <string name="home_handle_wa_no_space_not_hide_title">Workaround Home Handle Not Hidden</string>
    <string name="wallpaper_accuracy_title">Animation Accuracy Level</string>
    <string name="wallpaper_zoomIn_damping_ratio_summary">Zoom In Animation Damping Ratio</string>
    <string name="wallpaper_zoomOut_damping_ratio_summary">Zoom Out Animation Damping Ratio</string>
    <string name="override_linkage_wallpaper_anim_title">Override Linkage Wallpaper Anim</string>
    <string name="disable_wallpaper_auto_darken_summary">This will also add a beautiful text shadow on miui home icon title to enhance text visibility</string>
</resources>